Add paw-print favicon and sticky mobile call CTA

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hope Vets — Independent Veterinary Practice in Bovingdon, Hertfordshire</title>
     <meta name="description" content="Hope Vets is an independent, family-run veterinary practice in Bovingdon. RCVS accredited, purpose-built clinic offering expert care from a small, dedicated team.">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -855,8 +856,16 @@
     </footer>
 
 
+    <!-- ==================== STICKY MOBILE CALL BAR ==================== -->
+    <div class="fixed bottom-0 inset-x-0 z-50 sm:hidden bg-brand-red/95 backdrop-blur-md border-t border-brand-red-dark/30 px-4 py-3 safe-bottom">
+        <a href="tel:01442833198" class="flex items-center justify-center gap-2.5 bg-white text-brand-red w-full py-3 rounded-full text-base font-bold shadow-lg cursor-pointer active:scale-[0.98] transition-transform duration-150">
+            <i data-lucide="phone" class="w-5 h-5"></i>
+            Call Now &mdash; 01442 833 198
+        </a>
+    </div>
+
     <!-- ==================== BACK TO TOP ==================== -->
-    <button id="back-to-top" class="fixed bottom-6 right-6 z-50 w-12 h-12 bg-brand-red text-white rounded-full shadow-xl shadow-brand-red/30 flex items-center justify-center opacity-0 invisible translate-y-4 transition-all duration-300 cursor-pointer hover:bg-brand-red-dark hover:scale-110" aria-label="Back to top">
+    <button id="back-to-top" class="fixed bottom-20 sm:bottom-6 right-6 z-50 w-12 h-12 bg-brand-red text-white rounded-full shadow-xl shadow-brand-red/30 flex items-center justify-center opacity-0 invisible translate-y-4 transition-all duration-300 cursor-pointer hover:bg-brand-red-dark hover:scale-110" aria-label="Back to top">
         <i data-lucide="chevron-up" class="w-5 h-5"></i>
     </button>
 
