Swap hero image to webp (6MB -> 213KB)

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <!-- ==================== SECTION 1: HERO ==================== -->
     <section id="hero" class="relative min-h-screen flex items-center overflow-hidden">
         <!-- Background Image with Overlay -->
-        <div class="absolute inset-0 hero-parallax" style="background-image: url('images/hopevets-hero- image-muddy-lab-on-walk.png');">
+        <div class="absolute inset-0 hero-parallax" style="background-image: url('images/hopevets-hero- image-muddy-lab-on-walk.webp');">
             <div class="absolute inset-0 bg-gradient-to-r from-brand-charcoal/80 via-brand-charcoal/50 to-transparent"></div>
             <div class="absolute inset-0 bg-gradient-to-t from-brand-charcoal/60 via-transparent to-brand-charcoal/20"></div>
         </div>
